# Cryptography_Course_2022

./: README.md
AY2122/OpenSSL/bignum/: bignum.c
AY2122/OpenSSL/enc/: dec1.c
AY2122/Python/attacks/BF/: bf_server_cbc.py
AY2122/Python/attacks/CBCPaddingOracle/: CBCPaddingOracle_client.py  CBC_PaddingOracle_Attack_video.py  mydata.py
AY2122/Python/attacks/ECB/: mysecrets.py
AY2122/Python/attacks/ECB/ECBCopyPaste/: ECB_copyPaste_Attack.py
AY2122/Python/attacks/ECB/ECB_ACPA/: ECB_ACPAttack_client.py  ECB_ACP_DecryptionAttack_video.py
AY2122/Python/attacks/KeyStreamReuse/: keystream_reuse_attack.py
AY2122/Python/attacks/LengthExtension/: sha1.py
AY2122/Python/attacks/RSA Attacks/: 5.low_public_exponent.py  6.hastad_broadcast_RSA.py
commented_programs/: CMakeLists.txt
commented_programs/AY2021/OpenSSL/Exercises/: custom_keyed_digest.c  hmac_and_encrypt.c  noncense.c
commented_programs/AY2021/OpenSSL/asymmetric/: rsa_key_gen.c  rsa_operations.c  rsa_sign_verify.c
commented_programs/AY2021/OpenSSL/bignum/: bignum.c  primes.c
commented_programs/AY2021/OpenSSL/symmetric/: 3_hash_SHA1_live.c  4_enc_aes+checks.c  enc_aes_split.c
commented_programs/AY2021/attacks/: Length_extension_md5.py
commented_programs/AY2021/attacks/ECBvsCBC/: ECBvsCBCClient.py  ECBvsCBCServer.py
commented_programs/AY2021/attacks/RSA Attacks/: 2.fermat_factorization.py  3.common_prime.py  4.common_modulus.py  6.hastad_broadcast_RSA.py
commented_programs/AY2021/attacks/RSA Attacks/7.LSB_Oracle_Attack/: LSB_Oracle_client.py  LSB_Oracle_client_Decimal.py
commented_programs/AY2021/attacks/bit_flipping/: 210408_2.bf_stream_live.py  210408_3.bf_server_cbc.py  210408_4.bf_cbc_admin_live.py
commented_programs/AY2021/attacks/mitm/: 210408_1_mitm_live.py
commented_programs/AY2021/py-basics/Exercises/200607_material/: LSb_attack.py  client2.py  keystream_reuse_attack.py  sha1.py
commented_programs/AY2021/py-basics/Exercises/220503_material/: CBCPaddingOracle_different_padding_attack.py  aes_encrypt.py  bf_attack_block.py  bf_attack_salsa.py  ciphertext.enc  hmac.py  hmac_sha384.py  hmac_template.py  mydata_ex.py  mydata_ex.py.enc  mykeys.py
commented_programs/AY2021/py-basics/SRP/: SRP_Server.py  SRP_user.py
commented_programs/AY2021/py-basics/asymmetric/: 01_primes.py  02_RSA_pycryptodome.py  04_RSA_signature_hazmat.py  06_DH_simulate_protocol.py  mykey.pem  privatekey.pem
commented_programs/AY2021/py-basics/symmetric/: 1.gen_random_key.py  10.sha256_hashlib.py  11.HMAC_hashlib.py  3.salsa-update_live.py  4.stream_encrypt_file_update.py  5.AES_live.py  7.sha3_live.py  9.aead-aes-gcm_live.py  mysecrets.py  mysecrets_encrypted.txt
commented_programs/AY2021/theory/: bruteforce_bits.py
my_programs/AY2021/: CMakeLists.txt
my_programs/AY2021/OpenSSL/symmetric/: 1_enc_aes_live.c  1_random_live.c  2_genkey_and_save_live.c  3_hash_SHA1_live.c  4_enc_aes+checks.c  5_hmac_sha512.c
my_programs/AY2021/attacks/ECBvsCBC/: ECBvsCBCClient.py
my_programs/AY2021/attacks/mitm/: 210408_1_mitm_live.py
my_programs/AY2021/py-basics/symmetric/live/: 12.key_derivation_live.py  2.chacha20_live.py  4.stream_encrypt_file_update.py  6.sha256_live.py  7.sha3_live.py  8.hmac-sha512_live.py
my_programs/AY2021/theory/: RC4.py
